<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:layout_margin="@dimen/margem">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_blue_light"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingStart="@dimen/padding"/>

        <EditText
            android:id="@+id/edtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sexo"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_blue_light"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingStart="@dimen/padding"/>

        <RadioGroup
            android:id="@+id/rdgSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdbMasc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/masculino"/>

            <RadioButton
                android:id="@+id/rdbFem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/feminino"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_blue_light"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingStart="@dimen/padding"/>

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefone"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_blue_light"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingStart="@dimen/padding"/>

        <EditText
            android:id="@+id/edtTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_blue_light"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingStart="@dimen/padding"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/chkMusica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/musica"/>
            <CheckBox
                android:id="@+id/chkCinema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cinema"/>
            <CheckBox
                android:id="@+id/chkEsporte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/esporte"/>
            <CheckBox
                android:id="@+id/chkGastronomia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gastronomia"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notificacao"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_blue_light"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingStart="@dimen/padding"/>

        <Switch
            android:id="@+id/swtNotificacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnExibir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exibir"
                android:layout_margin="@dimen/margem"/>

            <Button
                android:id="@+id/btnLimpar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/limpar"
                android:layout_margin="@dimen/margem"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lblDados"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/teal_200"
            android:padding="@dimen/margem"
            android:visibility="invisible">

            <TextView
                android:id="@+id/txtNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txtTelefone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txtNotificacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txtSexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txtPref"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>